Reduce z-index on the tiled post search for mobile to prevent it from showing in front of the primary navigation menu

--- a/css/src/_search.scss
+++ b/css/src/_search.scss
@@ -162,7 +162,7 @@
 		top: 14rem;
 		bottom: 1rem;
 		left: 0;
-		z-index: 3;
+		z-index: 2;
 
 		&.cell {
 			padding: 1rem 0 0;
